--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="Never forget to feed your pets again with our convenient scheduling app. Keep your furry friends happy and healthy!">
-
+  <script src="backend.js"></script>
   <title>TapPetTap</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/parallax/jarallax.css">
